@@ -13,7 +13,7 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MySql.Data.Tests", "MySql.D
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MySql.Data.CF.Tests", "MySql.Data\Tests\MySql.Data.CF.Tests.csproj", "{710D9251-17A3-4429-9A91-63F03267F310}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MySql.VisualStudio", "MySql.VisualStudio\MySql.VisualStudio.csproj", "{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}"
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MySql.VisualStudio", "MySql.VisualStudio\MySql.VisualStudio.csproj", "{DC3517FF-AC26-4755-9B7A-EF658FF69593}"
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MySql.Data.Entity", "MySql.Data.Entity\Provider\MySql.Data.Entity.csproj", "{A8E799B1-D6AC-42BD-907E-B213D7E9B3C5}"
 EndProject
@@ -185,30 +185,30 @@ Global
 		{710D9251-17A3-4429-9A91-63F03267F310}.Release|Mixed Platforms.Build.0 = Release|Any CPU
 		{710D9251-17A3-4429-9A91-63F03267F310}.Release|x64.ActiveCfg = Release|Any CPU
 		{710D9251-17A3-4429-9A91-63F03267F310}.Release|x86.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Commercial|Any CPU.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Commercial|Any CPU.Build.0 = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Commercial|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Commercial|Mixed Platforms.Build.0 = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Commercial|x64.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Commercial|x86.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Debug|x64.ActiveCfg = Debug|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Debug|x86.ActiveCfg = Debug|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.GPL|Any CPU.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.GPL|Any CPU.Build.0 = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.GPL|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.GPL|Mixed Platforms.Build.0 = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.GPL|x64.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.GPL|x86.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Release|Any CPU.Build.0 = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Release|Mixed Platforms.Build.0 = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Release|x64.ActiveCfg = Release|Any CPU
-		{E7E48744-7BB3-463E-9A9A-7B4553D79C0E}.Release|x86.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Commercial|Any CPU.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Commercial|Any CPU.Build.0 = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Commercial|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Commercial|Mixed Platforms.Build.0 = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Commercial|x64.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Commercial|x86.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|x64.ActiveCfg = Debug|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.GPL|Any CPU.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.GPL|Any CPU.Build.0 = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.GPL|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.GPL|Mixed Platforms.Build.0 = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.GPL|x64.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.GPL|x86.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Release|Any CPU.Build.0 = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Release|Mixed Platforms.Build.0 = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Release|x64.ActiveCfg = Release|Any CPU
+		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Release|x86.ActiveCfg = Release|Any CPU
 		{A8E799B1-D6AC-42BD-907E-B213D7E9B3C5}.Commercial|Any CPU.ActiveCfg = Release|Any CPU
 		{A8E799B1-D6AC-42BD-907E-B213D7E9B3C5}.Commercial|Any CPU.Build.0 = Release|Any CPU
 		{A8E799B1-D6AC-42BD-907E-B213D7E9B3C5}.Commercial|Mixed Platforms.ActiveCfg = Release|Any CPU
@@ -256,28 +256,6 @@ Global
 		{77EC4E20-293A-48BA-8415-D0AD869D91FA}.Release|Mixed Platforms.Build.0 = Release|Any CPU
 		{77EC4E20-293A-48BA-8415-D0AD869D91FA}.Release|x64.ActiveCfg = Release|Any CPU
 		{77EC4E20-293A-48BA-8415-D0AD869D91FA}.Release|x86.ActiveCfg = Release|Any CPU
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|Any CPU.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|Mixed Platforms.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|Mixed Platforms.Build.0 = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|x64.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|x86.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|x86.Build.0 = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Debug|Any CPU.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Debug|Mixed Platforms.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Debug|x64.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Debug|x86.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Debug|x86.Build.0 = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.GPL|Any CPU.ActiveCfg = GPL|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.GPL|Mixed Platforms.ActiveCfg = GPL|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.GPL|Mixed Platforms.Build.0 = GPL|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.GPL|x64.ActiveCfg = GPL|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.GPL|x86.ActiveCfg = GPL|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.GPL|x86.Build.0 = GPL|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Release|Any CPU.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Release|Mixed Platforms.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Release|x64.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Release|x86.ActiveCfg = Commercial|x86
-		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Release|x86.Build.0 = Commercial|x86
 		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|Any CPU.ActiveCfg = Commercial|x86
 		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|Mixed Platforms.ActiveCfg = Commercial|x86
 		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Commercial|Mixed Platforms.Build.0 = Commercial|x86
